app/styles/app.scss
@import "normalize";
@import "helpers";

$html-bg: #3b6837;
$main-color: #383838;
$main-color-light: lighten($main-color, 30%);
$main-bg: #f9f7ec;
$main-bg-dark: #edebdd;
$gray-border: #d5d3cb;
$link-color: rgb(0, 172, 91);

@import "home";
@import "crate";
@import "install";
@import "me";

* {
  box-sizing: border-box;
}

html {
    background: url('/assets/noise.png');
    background-color: $html-bg;
    @media only screen and (prefers-color-scheme: dark) {
        background-color: #222;
    }
}

html, body { margin: 0; }

body {
  font-family: "Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;
  font-size: 16px;
  @include display-flex;
  @include flex-direction(column);
  @include align-items(center);
}

/* .ember-application is added by Ember after initial rendering */
.ember-application > div,
body > div {
    width: 960px;
    @media only screen and (max-width: 960px) {
        width: 100%;
    }
}

#main {
  @include display-flex;
  @include flex-direction(column);

  margin-bottom: 10px;
  background-color: $main-bg;
  padding: 15px;
  @include border-radius(10px);
  box-shadow: 0px 0px 5px 2px #3b6837;
  border: 5px solid #62865f;
  color: $main-color;
  @media only screen and (prefers-color-scheme: dark) {
    box-shadow: none;
    border: none;
    background-color: #111;
    color: #eee;
  }
}

#header {
    color: white;
    position: relative;
    height: 100px;
    @include display-flex;
    @include align-items(center);
    @include justify-content(space-between);

    a {
        color: white; text-decoration: none;
        &:hover { color: darken(white, 15%); }
    }

    .sep {
        margin: 0 10px;
        color: darken($html-bg, 10%);
        @media only screen and (prefers-color-scheme: dark) {
            color: #666;
        }
    }
    .nav, .menu {
        text-align: right;
        margin-right: 5px;
    }

    .menu {
        @include flex-grow(2);
        display: none;
    }
    .menu ul.dropdown {
        right: 0;
        left: auto;
        min-width: 200px;
        @media only screen and (prefers-color-scheme: dark) {
            color: #eee;
        }
    }

    button {
        background: none;
        border: 0;
        padding: 10px 0;

        &.active {
            background: rgb(42, 79, 39);
            box-shadow: inset -2px 2px 4px 0px rgb(36, 61, 38);
        }

        img {
          vertical-align: top;
        }
    }

    .current-user-links {
        left: auto;
        right: 0;
        min-width: 200px;
    }
    #doc-links {
        left: auto;
        min-width: 150px;
    }
    form.search {
        @include display-flex;
        @include flex-grow(1);
    }
    @media only screen and (max-width: 820px) {
        form.search { display: none; }
    }
    @media only screen and (max-width: 900px) {
        .menu { display: block; }
        .nav { display: none; }
    }
}

#header input.search, #mobile-search input.search {
    font-size: 90%;
    border: none;
    color: black;
    margin-left: 30px;
    padding: 5px 5px 5px 25px;
    background-color: white;
    background-image: url('/assets/search.png');
    background-repeat: no-repeat;
    background-position: 6px 6px;
    background-size: 14px 15px;
    @include border-radius(15px);
    @media only screen and (prefers-color-scheme: dark) {
        background-color: #111;
        color: #eee;
    }
}

form.search label {
    position: absolute;
    left: -10000px;
    top: auto;
    width: 1px;
    height: 1px;
    overflow: hidden;
}

#header input.search {
    width: 100%;
    margin-left: 16px;
    margin-right: 16px;
}

#mobile-search {
    display: none;
    margin-bottom: 10px;
    margin-left: 5px;
    margin-right: 5px;
    input.search {
        width: 100%;
        margin: 0;
    }
    @media only screen and (max-width: 820px) {
        display: block;
    }
}

input.search {
    box-shadow: none;
}

span.small {
    color: $main-color-light;
    @media only screen and (prefers-color-scheme: dark) {
        color: #bbb;
    }
    font-size: 80%;
    .num {
        font-weight: bold;
        color: $main-color;
    }
}

.optional {
    font-size: 80%;
}

.yanked {
    font-size: 80%;
    color: rgb(166, 0, 0)
}

div.loading-state {
    text-align: center;
    height: 65vh;
    padding-top: 30vh;
}
span.loading {
    display: inline-block;
    width: 16px;
    height: 16px;
    background-image: url(/assets/ajax-loader.gif);
}

#flash {
    display: none;
    font-weight: bold;
    font-size: 110%;
    background-color: rgb(255, 213, 213);
    border: 2px solid rgb(228, 136, 136);
    text-align: center;
    margin: 0 0 10px 0;
    padding: 10px;
    @include border-radius(5px);

    &.shown {
        display: block;
    }
}

a {
    color: $link-color;
    text-decoration: none;
    &:hover { color: darken($link-color, 10%); }
}
.small a {
    color: $main-color-light;
    text-decoration: underline;
    font-weight: normal;
    &:hover { color: darken($main-color-light, 10%); }
}

.after-main-links {
    margin: 40px;

    a { color: white; }
    a:hover { color: darken(white, 10%); }
    .sep {
        margin: 0 10px;
        color: darken($html-bg, 10%);
        @media only screen and (prefers-color-scheme: dark) {
            color: #666;
        }
    }

    @media only screen and (max-width: 450px) {
        margin: 20px;
        .sep { display: none; }
        @include display-flex;
        @include flex-direction(column);

        a {
            width: 50%;
            font-size: 110%;
            padding: 5px;
            &:not(:first-child) { border-top: 1px solid darken($html-bg, 10%); }
        }
    }
}

pre {
    background: $main-color;
    color: white;
    padding: 20px;
    font-family: Consolas, Monaco, 'Andale Mono', monospace;
}

.pagination {
    img, svg { vertical-align: middle; }

    .next.active,
    .prev.active,
    .next:hover,
    .prev:hover {
        background: none;
    }
}

button.dropdown, a.dropdown {
    color: inherit;
    cursor: pointer;
    .arrow { font-size: 50%; display: inline-block; vertical-align: middle; }
    .arrow::after { content: "▼"; }
    &.active .arrow::after { content: "▲"; }
}

ul.dropdown {
    display: none;
    position: absolute;
    top: 100%;
    left: 0;
    width: 100%;
    margin: 0;
    text-align: left;
    padding: 0;
    background: white;
    border: 1px solid $gray-border;
    list-style: none;
    z-index: 10;
    overflow: hidden;
    @include border-radius(5px);
    @media only screen and (prefers-color-scheme: dark) {
        border: 1px solid #666;
        background-color: #222;
        color: #eee;
    }

    li a {
        font-size: 90%;
        width: 100%;
        display: inline-block;
        padding: 8px 10px;
        text-decoration: none;
        color: $main-color !important;
        @media only screen and (prefers-color-scheme: dark) {
            color: #eee !important;
        }

        &:hover {
            background: lighten($main-color, 15%);
            color: white !important;
        }
    }
    li.last { border-top: 1px solid $gray-border; }
    &.open {
        display: block;
        visibility: visible;
        opacity: 1;
    }
}
.dropdown-container {
    display: inline-block;
    position: relative;
}

.hidden { display: none; }

.fork-me {
    position: absolute;
    top: 0;
    right: 0;

    @media only screen and (max-width: 1180px) {
        display: none;
    }
}

@media only screen and (max-width: 400px) {
    h1 { font-size: 1.5em; }
}

h1 {
  span.subtitle {
    display: block;
    font-size: x-small;
  }
}

#p404 {
    font-size: 120%;
    line-height: 3em;
    input {
        width: 100%;
        padding: 5px;
    }
}

.arrow-in-list svg {
    background: #fff;
    @media only screen and (prefers-color-scheme: dark) {
        background: #111;
    }
}

a.arrow svg {
    background: #EEECDD;
}

abbr[title] {
    text-decoration: none;
    border-bottom: 1px dotted;
}

nav svg {
    filter: invert(100%);
}

@media only percy {
    #crate-downloads .graph {
       display: none;
    }
}

